# lang

./: .gitattributes  AGENTS.md  Cargo.toml  Makefile  README.md  SKILL.md
.github/workflows/: ci.yml
.opencode/plans/: pr86-corrections.md
crates/lang_build/: Cargo.toml
crates/lang_cli/: Cargo.toml
crates/lang_syntax/: Cargo.toml
crates/lang_syntax/src/: ast.rs  diagnostic.rs  dump.rs  lexer.rs  lib.rs  norm.rs  source.rs  span.rs  token.rs
crates/lang_syntax/src/parser/: argpack.rs  atom.rs  canonical.rs  closure.rs  cursor.rs  deduce.rs  expr.rs  form.rs  let_stmt.rs  mod.rs  operator.rs  pipe.rs  product.rs
crates/lang_syntax/tests/: workspace_smoke.rs
docs/decisions/: 0001-v0.1-frontend-scope.md  0002-closure-ast-not-object.md  0003-no-traditional-call-syntax.md  0004-match-is-meta-function-not-syntax.md  0005-closed-overload-sets.md
spec/: README.md  ast-construction-v0.1.md  build-system-design.md  concrete-syntax-v0.2.md  diagnostics-recovery-v0.2.md  diagnostics-v0.1.md  entity-alias-design.md  entity-ref-design.md  frontend-v0.1.md  glossary.md  implementation-status-v0.1.md  lexical-syntax-v0.2.md  library-namespace-design-note.md  open-questions.md  operator-design.md  raw-ast-contract-freeze-v0.2.md  raw-ast-contract-v0.1.md  raw-ast-frozen-surface-v0.2.md  resolved-questions.md  roadmap.md
spec/contracts/: raw-ast-contract-freeze-v0.2.md  raw-ast-contract-v0.1.md  v0.3-normalization-handoff-checklist.md  (+5 more)
spec/design/: README.md  (+1 more)
tests/: diagnostics_golden.rs  lexer_golden.rs  normalized_golden.rs  parser_golden.rs
xtask/: Cargo.toml
(+1127 files in other folders)
