[package]
name = "lang_syntax"
version = "0.1.0"
edition = "2021"
publish = false

[[test]]
name = "lexer_golden"
path = "../../tests/lexer_golden.rs"

[[test]]
name = "parser_golden"
path = "../../tests/parser_golden.rs"

[[test]]
name = "diagnostics_golden"
path = "../../tests/diagnostics_golden.rs"
